--- a/package.json
+++ b/package.json
@@ -11,17 +11,21 @@
   "author": "mitch",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.5.0",
     "body-parser": "^1.20.2",
     "dotenv": "^16.3.1",
     "ejs": "^3.1.9",
-    "nodemon": "^3.0.1",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
     "express-validator": "^7.0.1",
-    "jest": "^29.6.4",
     "session": "^0.1.0",
     "test": "^3.3.0",
     "uuid": "^9.0.0",
     "validator": "^13.11.0"
+  },
+  "devDependencies": {
+    "bootstrap": "^5.3.1",
+    "jest": "^29.6.4",
+    "nodemon": "^3.0.1"
   }
 }
