--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "start": "nodemon index.js"
   },
   "keywords": [],
@@ -26,7 +26,7 @@
   },
   "devDependencies": {
     "bootstrap": "^5.3.1",
-    "jest": "^29.6.4",
+    "jest": "^29.7.0",
     "nodemon": "^3.0.1"
   }
 }
