--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
     "express": "^4.18.2",
     "express-session": "^1.17.3",
     "express-validator": "^7.0.1",
+    "linkedin-api-client": "^0.3.0",
+    "lowdb": "^1.0.0",
+    "node-fetch": "^3.3.2",
     "session": "^0.1.0",
     "supertest": "^6.3.3",
     "test": "^3.3.0",
