--- a/package.json
+++ b/package.json
@@ -13,13 +13,16 @@
   "dependencies": {
     "axios": "^1.5.0",
     "body-parser": "^1.20.2",
+    "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
     "express-validator": "^7.0.1",
+    "json-server": "^0.17.3",
     "linkedin-api-client": "^0.3.0",
     "lowdb": "^1.0.0",
+    "nanoid": "^5.0.1",
     "node-fetch": "^3.3.2",
     "session": "^0.1.0",
     "supertest": "^6.3.3",
