--- a/package.json
+++ b/package.json
@@ -1,38 +1,43 @@
 {
-  "name": "mp2",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "jest",
-    "start": "nodemon index.js"
-  },
-  "keywords": [],
-  "author": "mitch",
-  "license": "ISC",
+  "name": "my-app",
+  "version": "0.1.0",
+  "private": true,
   "dependencies": {
-    "axios": "^1.5.0",
-    "body-parser": "^1.20.2",
-    "cors": "^2.8.5",
-    "dotenv": "^16.3.1",
-    "ejs": "^3.1.9",
-    "express": "^4.18.2",
-    "express-session": "^1.17.3",
-    "express-validator": "^7.0.1",
-    "json-server": "^0.17.3",
-    "linkedin-api-client": "^0.3.0",
-    "lowdb": "^1.0.0",
-    "nanoid": "^5.0.1",
-    "node-fetch": "^3.3.2",
-    "session": "^0.1.0",
-    "supertest": "^6.3.3",
-    "test": "^3.3.0",
-    "uuid": "^9.0.0",
-    "validator": "^13.11.0"
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^13.4.0",
+    "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.3.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-icons": "^4.7.1",
+    "react-router": "^6.8.0",
+    "react-router-dom": "^6.8.0",
+    "react-scripts": "5.0.1",
+    "sass": "^1.58.0",
+    "web-vitals": "^2.1.4"
   },
-  "devDependencies": {
-    "bootstrap": "^5.3.1",
-    "jest": "^29.7.0",
-    "nodemon": "^3.0.1"
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
+  },
+  "eslintConfig": {
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
